tests/ui/generic-const-items/trivially-unsatisfied-bounds-0.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/trivially-unsatisfied-bounds-0.rs:11:13
   |
LL |     let _ = UNUSABLE;
   |             ^^^^^^^^ the trait `Copy` is not implemented for `String`
   |
note: required by a bound in `UNUSABLE`
  --> $DIR/trivially-unsatisfied-bounds-0.rs:8:13
   |
LL | const UNUSABLE: () = ()
   |       -------- required by a bound in this constant
LL | where
LL |     String: Copy;
   |             ^^^^ required by this bound in `UNUSABLE`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
